syntax = "proto3";

package authz.v1;

option go_package = "authz-go/pkg/proto/authz/v1;authzv1";

import "authz/v1/common.proto";
import "google/protobuf/timestamp.proto";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
  rpc RequestPasswordReset(RequestPasswordResetRequest) returns (RequestPasswordResetResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc GetOAuthURL(GetOAuthURLRequest) returns (GetOAuthURLResponse);
  rpc OAuthCallback(OAuthCallbackRequest) returns (OAuthCallbackResponse);
}

message TokenPair {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp access_token_expires_at = 3;
  google.protobuf.Timestamp refresh_token_expires_at = 4;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message RegisterResponse {
  UserInfo user = 1;
  TokenPair tokens = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  UserInfo user = 1;
  TokenPair tokens = 2;
}

message LogoutRequest {
  string refresh_token = 1;
}

message LogoutResponse {}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  TokenPair tokens = 1;
}

message VerifyEmailRequest {
  string token = 1;
}

message VerifyEmailResponse {
  bool verified = 1;
}

message RequestPasswordResetRequest {
  string email = 1;
}

message RequestPasswordResetResponse {}

message ResetPasswordRequest {
  string token = 1;
  string new_password = 2;
}

message ResetPasswordResponse {}

message GetOAuthURLRequest {
  string provider = 1;
  string redirect_uri = 2;
}

message GetOAuthURLResponse {
  string authorization_url = 1;
  string state = 2;
}

message OAuthCallbackRequest {
  string provider = 1;
  string code = 2;
  string state = 3;
  string redirect_uri = 4;
}

message OAuthCallbackResponse {
  UserInfo user = 1;
  TokenPair tokens = 2;
  bool is_new_user = 3;
}
